# fully-typed-reprorusted-python-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pmat.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/reprorusted_python_cli/: __init__.py  augment_corpus.py  category_diff.py  check_test_lib_crates.py  clippy_gate.py  corpus_quality_report.py  export_hf_corpus.py  generate_insights.py  golden_traces_analyzer.py  hitl_sampler.py  label_corpus.py  measure_compile_rate.py  synthetic_augmenter.py  verify_qa_checklist.py  weak_supervision.py  zero_success_analyzer.py
tests/: conftest.py
tests/unit/: test_cli_entrypoints.py  test_stubs.py  test_synthetic_augmenter.py  test_weak_supervision.py
