[project]
name = "reprorusted-python-cli"
version = "1.0.0"
description = "Fully-typed Python-to-Rust transpilation corpus and CITL training framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "PAIML", email = "info@paiml.com" }]
keywords = ["python", "rust", "transpiler", "argparse", "cli", "depyler", "corpus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "hypothesis>=6.100.0",
    "ruff>=0.8.0",
    "ty>=0.0.14",
    "bandit>=1.8.0",
    "mutmut>=3.2.0",
    "pdoc>=15.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reprorusted_python_cli"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.isort]
known-first-party = ["reprorusted_python_cli"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--doctest-modules",
    "--cov=src/reprorusted_python_cli",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/reprorusted_python_cli"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 95
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "if __name__ == .__main__.:",
]

[tool.ty.environment]
python-version = "3.11"

[tool.mutmut]
paths_to_mutate = "src/reprorusted_python_cli/"
tests_dir = "tests/"
runner = "pytest -x -q --no-cov"
